--- a/index.html
+++ b/index.html
@@ -2,21 +2,29 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dragón AR</title>
+  <title>Dragón en Realidad Aumentada</title>
 
+  <!-- Model Viewer de Google -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
 </head>
 
-<body style="margin:0;">
+<body style="margin:0; overflow:hidden;">
+
   <model-viewer
     src="dragon.glb"
     ar
     ar-modes="scene-viewer webxr quick-look"
+    ar-placement="floor"
+    ar-scale="fixed"
     camera-controls
     auto-rotate
+    shadow-intensity="1"
     style="width: 100%; height: 100vh;">
   </model-viewer>
+
 </body>
 </html>
+
+
