--- a/index.html
+++ b/index.html
@@ -4,27 +4,103 @@
   <meta charset="UTF-8">
   <title>Dragón en Realidad Aumentada</title>
 
-  <!-- Model Viewer de Google -->
   <script type="module"
     src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
   </script>
+
+  <style>
+    body {
+      margin: 0;
+      background: #ffffff;
+    }
+
+    button {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      background: #000000;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
-<body style="margin:0; overflow:hidden;">
+<body>
 
   <model-viewer
+    id="viewer"
     src="dragon.glb"
     ar
     ar-modes="scene-viewer webxr quick-look"
     ar-placement="floor"
-    ar-scale="fixed"
     camera-controls
     auto-rotate
-    shadow-intensity="1"
     style="width: 100%; height: 100vh;">
+    
+    <!-- BOTÓN AR FORZADO -->
+    <button slot="ar-button">
+      Ver en mi espacio
+    </button>
+
   </model-viewer>
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Dragón en Realidad Aumentada</title>
 
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
 
+  <style>
+    body {
+      margin: 0;
+      background: #ffffff;
+    }
+
+    button {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 12px 20px;
+      font-size: 16px;
+      background: #000000;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+
+<body>
+
+  <model-viewer
+    id="viewer"
+    src="dragon.glb"
+    ar
+    ar-modes="scene-viewer webxr quick-look"
+    ar-placement="floor"
+    camera-controls
+    auto-rotate
+    style="width: 100%; height: 100vh;">
+    
+    <!-- BOTÓN AR FORZADO -->
+    <button slot="ar-button">
+      Ver en mi espacio
+    </button>
+
+  </model-viewer>
+
+</body>
+</html>
