--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>Dragón AR</title>
 
-    <!-- Model Viewer oficial -->
     <script type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
     </script>
@@ -19,6 +18,21 @@
         width: 100vw;
         height: 100vh;
       }
+
+      /* Botón AR visible SIEMPRE */
+      button[slot="ar-button"] {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 12px 18px;
+        background: #000000;
+        color: #ffffff;
+        border: none;
+        border-radius: 8px;
+        font-size: 16px;
+        cursor: pointer;
+      }
     </style>
   </head>
 
@@ -27,12 +41,16 @@
     <model-viewer
       src="dragon.glb"
       ar
-      ar-modes="scene-viewer quick-look webxr"
+      ar-modes="scene-viewer webxr quick-look"
+      ar-placement="floor"
       camera-controls
-      auto-rotate
       shadow-intensity="1"
       exposure="1"
       alt="Cabeza de dragón en realidad aumentada">
+
+      <button slot="ar-button">
+        Ver en mi espacio
+      </button>
 
     </model-viewer>
 
