--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
 
     <model-viewer
-      src="dragon.glb"
+      src="https://modelviewer.dev/shared-assets/models/Astronaut.glb"
       ar
       ar-modes="scene-viewer webxr quick-look"
       ar-placement="floor"
