--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Dragón AR</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Dragón AR</title>
 
-    <script type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-    </script>
+  <script type="module"
+    src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
+  </script>
 
-    <style>
-      body {
-        margin: 0;
-        background: #ffffff;
-      }
+  <style>
+    body {
+      margin: 0;
+      background: #ffffff;
+    }
 
-      model-viewer {
-        width: 100vw;
-        height: 100vh;
-      }
+    model-viewer {
+      width: 100vw;
+      height: 100vh;
+    }
 
-      /* Botón AR visible SIEMPRE */
-      button[slot="ar-button"] {
-        position: absolute;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        padding: 12px 18px;
-        background: #000000;
-        color: #ffffff;
-        border: none;
-        border-radius: 8px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-    </style>
-  </head>
+    button[slot="ar-button"] {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 14px 20px;
+      background: black;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+    }
+  </style>
+</head>
 
-  <body>
+<body>
 
-    <model-viewer
-      src="dragon.glb"
-      ar
-      ar-modes="scene-viewer webxr quick-look"
-      ar-placement="floor"
-      camera-controls
-      shadow-intensity="1"
-      exposure="1"
-      alt="Cabeza de dragón en realidad aumentada">
+  <model-viewer
+    src="dragon.glb"
+    ar
+    ar-modes="webxr scene-viewer"
+    ar-placement="floor"
+    ar-scale="fixed"
+    camera-controls
+    shadow-intensity="1"
+    exposure="1">
 
-      <button slot="ar-button">
-        Ver en mi espacio
-      </button>
+    <button slot="ar-button">
+      Ver en mi espacio
+    </button>
 
-    </model-viewer>
+  </model-viewer>
 
-  </body>
+</body>
 </html>
