--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
   <model-viewer
     src="dragon.glb"
     ar
-    ar-modes="webxr scene-viewer"
-    ar-placement="floor"
-    ar-scale="fixed"
+    ar-modes="scene-viewer webxr"
+    ar-placement="wall"
     camera-controls
     shadow-intensity="1"
     exposure="1">
