--- a/index.html
+++ b/index.html
@@ -12,44 +12,45 @@
     body {
       margin: 0;
       background: #ffffff;
+      font-family: Arial, sans-serif;
     }
 
     model-viewer {
       width: 100vw;
-      height: 100vh;
+      height: 85vh;
     }
 
-    button[slot="ar-button"] {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 14px 20px;
+    .ar-button {
+      display: block;
+      width: 90%;
+      margin: 15px auto;
+      padding: 16px;
+      text-align: center;
       background: black;
       color: white;
-      border: none;
+      font-size: 18px;
       border-radius: 10px;
-      font-size: 16px;
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
 
+  <!-- Visor 3D -->
   <model-viewer
     src="dragon.glb"
-    ar
-    ar-modes="scene-viewer webxr"
-    ar-placement="wall"
     camera-controls
     shadow-intensity="1"
     exposure="1">
-
-    <button slot="ar-button">
-      Ver en mi espacio
-    </button>
-
   </model-viewer>
+
+  <!-- BOTÓN AR REAL -->
+  <a
+    class="ar-button"
+    href="intent://arvr.google.com/scene-viewer/1.0?file=https://danidragon-lab.github.io/dragon-ar/dragon.glb&mode=ar_only#Intent;scheme=https;package=com.google.ar.core;action=android.intent.action.VIEW;end;">
+    Ver en mi espacio (AR)
+  </a>
 
 </body>
 </html>
